--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/RasberryPiController/bin
+/RaspberryPiController/bin
+/RaspberryPiController/lib
+/RaspberryPiController/images
+/scripts/images
+/scripts/videos
